--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-app.message.wrong.cast = Bad casting / wrong type.
-app.message.wrong.operation.arithmetic = Wrong arithmetic operation should be (*,/,+,-).
-app.message.wrong.operation.date.format = Wrong Date Format should be YYYY-MM-DD.
-app.message.wrong.additional.data = Mismatching operation name and DTO additional fields.
+app.message.wrong.cast=Bad casting / wrong type.
+app.message.wrong.operation.arithmetic=Wrong arithmetic operation should be (*,/,+,-).
+app.message.wrong.operation.date.format=Wrong Date Format should be YYYY-MM-DD.
+app.message.wrong.additional.data=Mismatching operation name and DTO additional fields.
+logging.level.telran=debug
