--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-app.message.wrong.cast=Bad casting / wrong type.
-app.message.wrong.operation.arithmetic=Wrong arithmetic operation should be (*,/,+,-).
-app.message.wrong.operation.date.format=Wrong Date Format should be YYYY-MM-DD.
-app.message.wrong.additional.data=Mismatching operation name and DTO additional fields.
+app.message.wrong.operation.name=Wrong operation name should be from
+app.message.wrong.operation.arithmetic=Wrong arithmetic operatoin should be
+app.message.wrong.dto.fileds=DTO mismatches the specified operation
 logging.level.telran=debug
