--- a/pulse-monitoring-services/pulse-monitoring-analyzer/src/test/resources/application.properties
+++ b/pulse-monitoring-services/pulse-monitoring-analyzer/src/test/resources/application.properties
@@ -1,2 +1,2 @@
-app.jumps.binding.consumer.name=jumps-out-0
-app.jumps.binding.producer.name=pulseProbeConsumer-in-0
+app.jumps.binding.name=jumps-out-0
+logging.level.telran = trace
