--- a/pulse-monitoring-services/pom.xml
+++ b/pulse-monitoring-services/pom.xml
@@ -34,9 +34,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-stream-binder-kafka</artifactId>
-			
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -62,6 +60,13 @@
 			<groupId>telran.monitoring.entities</groupId>
 			<artifactId>pulse-monitoring-entities</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>telran.monitoring.repositories</groupId>
+			<artifactId>pulse-monitoring-repositories</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
