--- a/pulse-monitoring-repositories/pom.xml
+++ b/pulse-monitoring-repositories/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.0.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>telran.monitoring.repositories</groupId>
 	<artifactId>pulse-monitoring-repositories</artifactId>
@@ -29,12 +29,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
-
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
         <dependency>
             <groupId>telran.monitoring.entities</groupId>
             <artifactId>pulse-monitoring-entities</artifactId>
@@ -42,7 +36,6 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -51,5 +44,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
