--- a/pulse-monitoring-dto/pom.xml
+++ b/pulse-monitoring-dto/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>telran.monitoring</groupId>
   <artifactId>pulse-monitoring-dto</artifactId>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
   <properties>
     <maven.compiler.target>1.17</maven.compiler.target>
     <maven.compiler.source>1.17</maven.compiler.source>
