--- a/pulse-monitoring-entities/pom.xml
+++ b/pulse-monitoring-entities/pom.xml
@@ -33,12 +33,15 @@
         <dependency>
             <groupId>telran.monitoring</groupId>
             <artifactId>pulse-monitoring-dto</artifactId>
-            <version>0.0.1</version>
-            <scope>compile</scope>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
     </dependencies>
     <build>
