--- a/pulse-monitoring-services/pulse-monitoring-jumps-notifier/pom.xml
+++ b/pulse-monitoring-services/pulse-monitoring-jumps-notifier/pom.xml
@@ -18,5 +18,9 @@
             <version>2.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
 </project>
