--- a/pulse-probes-imitator/pom.xml
+++ b/pulse-probes-imitator/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>telran.monitoring</groupId>
 			<artifactId>pulse-monitoring-dto</artifactId>
-			<version>0.0.1</version>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
