--- a/pulse-monitoring-services/avg-values-back-office/src/main/resources/application.yml
+++ b/pulse-monitoring-services/avg-values-back-office/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://root:${MONGO_PASSWORD}@cluster0.qxamzgx.mongodb.net/College?retryWrites=true&w=majority
+      uri: mongodb+srv://root:${MONGO_PASSWORD}@cluster0.qxamzgx.mongodb.net/AvgValues?retryWrites=true&w=majority
 logging:
   level:
     root: debug
