--- a/pulse-monitoring-services/pulse-monitoring-avg-populator/src/main/resources/application.yml
+++ b/pulse-monitoring-services/pulse-monitoring-avg-populator/src/main/resources/application.yml
@@ -20,4 +20,4 @@ spring:
 
   data:
     mongodb:
-      uri: mongodb+srv://root:${MONGO_PASSWORD}@cluster0.qxamzgx.mongodb.net/College?retryWrites=true&w=majority
+      uri: mongodb+srv://root:${MONGO_PASSWORD}@cluster0.qxamzgx.mongodb.net/AvgValues?retryWrites=true&w=majority
