--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /pulse-monitoring-services/avg-values-back-office/target/
 /pulse-monitoring-services/pulse-monitoring-configuration-server/target/
 /pulse-monitoring-services/pulse-monitoring-configuration-server/pulse-monitoring-configuration-server.iml
+/pulse-monitoring-services/visits-back-office/visits-back-office.iml
+/pulse-monitoring-services/visits-back-office/target/
