--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /pulse-monitoring-services/pulse-monitoring-configuration-server/pulse-monitoring-configuration-server.iml
 /pulse-monitoring-services/visits-back-office/visits-back-office.iml
 /pulse-monitoring-services/visits-back-office/target/
+/exception-handling/exceptions-handling.iml
+/pulse-monitoring-services/pulse-monitoring-gateway/pulse-monitoring-gateway.iml
