--- a/pulse-monitoring-services/pom.xml
+++ b/pulse-monitoring-services/pom.xml
@@ -100,5 +100,9 @@
 		<module>pulse-monitoring-jumps-notifier</module>
 		<module>pulse-monitoring-notification-data-provider</module>
 		<module>pulse-monitoring-avg-populator</module>
+		<module>avg-values-back-office</module>
+		<module>visits-back-office</module>
+		<module>pulse-monitoring-configuration-server</module>
+		<module>pulse-monitoring-gateway</module>
 	</modules>
 </project>
