--- a/pulse-monitoring-dto/pom.xml
+++ b/pulse-monitoring-dto/pom.xml
@@ -14,5 +14,9 @@
       <version>1.18.26</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>jakarta.validation</groupId>
+          <artifactId>jakarta.validation-api</artifactId>
+      </dependency>
   </dependencies>
 </project>
