--- a/pulse-monitoring-services/pulse-monitoring-gateway/src/main/resources/application.yml
+++ b/pulse-monitoring-services/pulse-monitoring-gateway/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: avg-populator
+    name: gateway
   config:
     import: optional:configserver:http://localhost:8888
   cloud:
