--- a/pulse-monitoring-services/pulse-monitoring-notification-data-provider/src/main/resources/application.yml
+++ b/pulse-monitoring-services/pulse-monitoring-notification-data-provider/src/main/resources/application.yml
@@ -3,3 +3,9 @@ spring:
     name: data-provider
   config:
     import: optional:configserver:http://localhost:8888
+  cloud:
+    config:
+      fail-fast: true
+      retry:
+        initial-interval: 30000
+        max-interval: 100000
