--- a/pulse-monitoring-services/visits-back-office/pom.xml
+++ b/pulse-monitoring-services/visits-back-office/pom.xml
@@ -25,6 +25,12 @@
 			<artifactId>h2</artifactId>
 			<scope>test</scope>
 		</dependency>
+	  <dependency>
+		  <groupId>telran.exceptions</groupId>
+		  <artifactId>exceptions-handling</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		  <scope>compile</scope>
+	  </dependency>
   </dependencies>
   
 </project>
