--- a/pulse-monitoring-dto/pom.xml
+++ b/pulse-monitoring-dto/pom.xml
@@ -14,9 +14,12 @@
       <version>1.18.26</version>
       <scope>compile</scope>
     </dependency>
-      <dependency>
-          <groupId>jakarta.validation</groupId>
-          <artifactId>jakarta.validation-api</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>jakarta.validation</groupId>
+      <artifactId>jakarta.validation-api</artifactId>
+      <version>3.0.2</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
 </project>
