--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@
 /accounting-management/mvnw
 /accounting-management/mvnw.cmd
 /accounting-management/.mvn/
+/accounting-management/accounting-management.iml
+/exceptions-handling/exceptions-handling.iml
