--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@
 /accounting-management/.mvn/
 /accounting-management/accounting-management.iml
 /exceptions-handling/exceptions-handling.iml
+/exceptions-handling/target/
